--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -21,3 +21,10 @@ What would you like to see in Vim for Windows?
   * Shell/pty support. Look at [http://www.wana.at/vimshell/ VIM-Shell], [http://www.vim.org/scripts/script.php?script_id=1974 PyConsole], and [http://sourceforge.net/projects/console/ Console]
   * Visual Studio integration for VS 200x. VisVim only works for VS98 (VC6). Look at [http://www.vim.org/scripts/script.php?script_id=864 Visual Studio].
   * Omni-completion for C# and other .NET languages. Steal intellisense stuff from [http://www.icsharpcode.net/OpenSource/SD/ SharpDevelop]?
+
+== Performance ==
+
+This should be of general benefit to Vim on all platforms.
+
+  * Profile start-up times
+  * Profile heavyweight operations. For example, [http://skawina.eu.org/mikolaj/vst.html VST] takes about 1 minute to regenerate its own documentation, running at 100% CPU.
