--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -10,21 +10,27 @@ What would you like to see in Vim for Windows?
 
 == Win64 ==
 
-  * Support for Ruby, TCL, MzScheme, etc interfaces. This requires the owners of these languages to produce 64-bit builds.
+ * Support for Ruby, TCL, MzScheme, etc interfaces. This requires the owners of these languages to produce 64-bit builds.
 
-== Console ==
+== Visuals ==
 
-  * Full support for Unicode and UTF-8
+ * Bigger Vim icon that don't look like crap on Vista; i.e., 64x64 or better.
+ * Better toolbar icons, such as the Tango ones.
+
+== Console Vim ==
+
+ * Full support for Unicode and UTF-8.
+ * Parity with xterm Vim.
 
 == Misc ==
 
-  * Shell/pty support. Look at [http://www.wana.at/vimshell/ VIM-Shell], [http://www.vim.org/scripts/script.php?script_id=1974 PyConsole], and [http://sourceforge.net/projects/console/ Console]
-  * Visual Studio integration for VS 200x. VisVim only works for VS98 (VC6). Look at [http://www.vim.org/scripts/script.php?script_id=864 Visual Studio].
-  * Omni-completion for C# and other .NET languages. Steal intellisense stuff from [http://www.icsharpcode.net/OpenSource/SD/ SharpDevelop]?
+ * Shell/pty support. Look at [http://www.wana.at/vimshell/ VIM-Shell], [http://www.vim.org/scripts/script.php?script_id=1974 PyConsole], and [http://sourceforge.net/projects/console/ Console]
+ * Visual Studio integration for VS 200x. VisVim only works for VS98 (VC6). Look at [http://www.vim.org/scripts/script.php?script_id=864 Visual Studio] plugin.
+ * Omni-completion for C# and other .NET languages. Steal intellisense stuff from [http://www.icsharpcode.net/OpenSource/SD/ SharpDevelop]?
 
 == Performance ==
 
 This should be of general benefit to Vim on all platforms.
 
-  * Profile start-up times
-  * Profile heavyweight operations. For example, [http://skawina.eu.org/mikolaj/vst.html VST] takes about 1 minute to regenerate its own documentation, running at 100% CPU.
+ * Profile start-up times, both with `-u NONE` and with a non-trivial set of plugins.
+ * Profile heavyweight operations. For example, [http://skawina.eu.org/mikolaj/vst.html VST] takes about 1 minute to regenerate its own documentation, running at 100% CPU. This case is probably a combination of inefficient script techniques, regexp inefficiencies, and inefficiencies in the core of Vim.
