--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -26,7 +26,8 @@ What would you like to see in Vim for Windows?
 
  * Shell/pty support. Look at [http://www.wana.at/vimshell/ VIM-Shell], [http://www.vim.org/scripts/script.php?script_id=1974 PyConsole], and [http://sourceforge.net/projects/console/ Console]
  * Visual Studio integration for VS 200x. VisVim only works for VS98 (VC6). Look at [http://www.vim.org/scripts/script.php?script_id=864 Visual Studio] plugin.
- * Omni-completion for C# and other .NET languages. Steal intellisense stuff from [http://www.icsharpcode.net/OpenSource/SD/ SharpDevelop]?
+ * Omni-completion for C# and other .NET languages. Steal intellisense stuff from [http://www.icsharpcode.net/OpenSource/SD/ SharpDevelop]? Look at [http://www.vim.org/scripts/script.php?script_id=1785 JavaComplete] too.
+ * Full-screen mode like MacVim.
 
 == Performance ==
 
