--- a/wiki/MiscTools.wiki
+++ b/wiki/MiscTools.wiki
@@ -9,3 +9,4 @@ Links to miscellaneous tools that are popular with Vim users. Specifically, to W
   * [http://sysmic.org/dotclear/index.php?2006/06/22/55-add-multibyte-characters-support-in-par par multibyte patch]
   * ctags
   * cygwin
+  * [http://www.vim.org/scripts/script.php?script_id=1783 CScope]
