--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -30,11 +30,14 @@ What would you like to see in Vim for Windows?
  * Full-screen mode like [http://code.google.com/p/macvim/ MacVim].
  * Incorporate [http://www.vim.org/scripts/script.php?script_id=1720 GVimExt_Tab] functionality, if it's not already.
  * Play well with [http://portablegvim.sourceforge.net/ Portable GVim].
+ * Support proportional fonts, like GTK version.
 
 == Performance ==
 
 This should be of general benefit to Vim on all platforms.
 
+ * Painting speed of gvim. Noticeably slower than console Vim on old machines.
+ * Get rid of the DOS box for shell commands.
  * Profile start-up times, both with `-u NONE` and with a non-trivial set of plugins.
  * Profile heavyweight operations. For example, [http://skawina.eu.org/mikolaj/vst.html VST] takes about 1 minute to regenerate its own documentation, running at 100% CPU. This case is probably a combination of inefficient script techniques, regexp inefficiencies, and inefficiencies in the core of Vim.
 
