--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -31,6 +31,7 @@ What would you like to see in Vim for Windows?
  * Incorporate [http://www.vim.org/scripts/script.php?script_id=1720 GVimExt_Tab] functionality, if it's not already.
  * Play well with [http://portablegvim.sourceforge.net/ Portable GVim].
  * Support proportional fonts, like GTK version.
+ * Investigate [http://lwn.net/Articles/188693/ CMake]
 
 == Performance ==
 
