--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -32,6 +32,7 @@ What would you like to see in Vim for Windows?
  * Play well with [http://portablegvim.sourceforge.net/ Portable GVim].
  * Support proportional fonts, like GTK version.
  * Investigate [http://lwn.net/Articles/188693/ CMake]
+ * Play nice with [http://www.nabble.com/VIM-and-NTFS-streams-to15203542.html NTFS streams].
 
 == Performance ==
 
