Edited wiki page through web user interface.

--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -24,7 +24,7 @@ What would you like to see in Vim for Windows?
 
 == Misc ==
 
- * Shell/pty support. Look at [http://www.wana.at/vimshell/ VIM-Shell], [http://www.vim.org/scripts/script.php?script_id=1974 PyConsole], and [http://sourceforge.net/projects/console/ Console]
+ * Shell/pty support. Look at [http://www.wana.at/vimshell/ VIM-Shell], [http://www.vim.org/scripts/script.php?script_id=1974 PyConsole], [http://sourceforge.net/projects/console/ Console], and [http://www.noah.org/wiki/Pexpect Pexpect].
  * Visual Studio integration for VS 200x. VisVim only works for VS98 (VC6). Look at [http://code.google.com/p/vim-visual-studio/ Visual Studio] plugin.
  * Omni-completion for C# and other .NET languages. Steal intellisense stuff from [http://www.icsharpcode.net/OpenSource/SD/ SharpDevelop]? Look at [http://www.vim.org/scripts/script.php?script_id=1785 JavaComplete] too.
  * Full-screen mode like [http://code.google.com/p/macvim/ MacVim].
