--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -26,7 +26,7 @@ What would you like to see in Vim for Windows?
 == Misc ==
 
  * Shell/pty support. Look at [http://www.wana.at/vimshell/ VIM-Shell], [http://www.vim.org/scripts/script.php?script_id=1974 PyConsole], [http://sourceforge.net/projects/console/ Console], and [http://www.noah.org/wiki/Pexpect Pexpect].
- * Visual Studio integration for VS 200x. VisVim only works for VS98 (VC6). Look at [http://code.google.com/p/vim-visual-studio/ Visual Studio] plugin.
+ * Visual Studio integration for VS 200x. VisVim only works for VS98 (VC6). Look at [http://code.google.com/p/vim-visual-studio/ Visual Studio] plugin. [http://code.google.com/p/vivim/ ViVim] is a new contender as of Aug 2008.
  * Omni-completion for C# and other .NET languages. Steal intellisense stuff from [http://www.icsharpcode.net/OpenSource/SD/ SharpDevelop]? Look at [http://www.vim.org/scripts/script.php?script_id=1785 JavaComplete] too.
  * Full-screen mode like [http://code.google.com/p/macvim/ MacVim].
  * Incorporate [http://www.vim.org/scripts/script.php?script_id=1720 GVimExt_Tab] functionality, if it's not already.
@@ -34,7 +34,7 @@ What would you like to see in Vim for Windows?
  * Support proportional fonts, like GTK version.
  * Investigate [http://lwn.net/Articles/188693/ CMake]
  * Play nice with [http://www.nabble.com/VIM-and-NTFS-streams-to15203542.html NTFS streams].
- * Build new binaries that correctly handle new DST rules with [http://msdn2.microsoft.com/en-us/vstudio/bb264729.aspx hotfix].
+
 
 == Performance ==
 
