--- a/wiki/WishList.wiki
+++ b/wiki/WishList.wiki
@@ -34,6 +34,7 @@ What would you like to see in Vim for Windows?
  * Support proportional fonts, like GTK version.
  * Investigate [http://lwn.net/Articles/188693/ CMake]
  * Play nice with [http://www.nabble.com/VIM-and-NTFS-streams-to15203542.html NTFS streams].
+ * Look at [http://www.vim.org/scripts/script.php?script_id=2375 if_v8] integration.
 
 
 == Performance ==
